# polyglot-compute-lab

./: Cargo.toml  README.md  build_all.sh  index.html  index.js  pyproject.toml  wat_dll.wasm
.github/workflows/: deploy.yml
pkg/: package.json  polyglot_compute_lab.d.ts  polyglot_compute_lab.js  polyglot_compute_lab_bg.wasm  polyglot_compute_lab_bg.wasm.d.ts
python/: benchmark.py  benchmark2.py
src/: lib.rs  shader.wgsl
wat/: dll.wat
www/: index.html  index.js  zig_dll.wasm  zig_zipper.wasm
zig/: dll.zig  zipper.zig
