[package]
name = "polyglot-compute-lab"
version = "0.1.0"
edition = "2021"

[lib]
name = "polyglot_compute_lab"
crate-type = ["cdylib"]

[features]
default = ["wasm"]
wasm = ["dep:wasm-bindgen"]
python = ["dep:pyo3"]

[dependencies]
wasm-bindgen = { version = "0.2", optional = true }
pyo3 = { version = "0.20", features = ["extension-module"], optional = true }