[package]
name = "polyglot-compute-lab"
version = "0.1.0"
edition = "2021"
authors = ["R&D Researcher <funmatu@gmail.com>"]
description = "A dual-runtime computation core for WebAssembly and Python, powered by Rust."

[lib]
name = "polyglot_compute_lab"
crate-type = ["cdylib"]

[features]
default = ["wasm"]
wasm = ["dep:wasm-bindgen", "dep:wasm-bindgen-futures", "dep:wgpu", "dep:bytemuck", "dep:futures"]
python = ["dep:pyo3", "dep:tokio", "dep:wgpu", "dep:bytemuck", "dep:futures", "dep:wasmtime"]

[dependencies]
# Common dependencies
serde = { version = "1.0", features = ["derive"] }
futures = { version = "0.3", optional = true }
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"], optional = true }
wasmtime = { version = "16.0", optional = true }

# Feature: WebAssembly & WGPU
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
wgpu = { version = "23", optional = true } # WebGPUのRust wrapper
bytemuck = { version = "1.14", features = ["derive"], optional = true }

# Feature: Python
pyo3 = { version = "0.20", features = ["extension-module"], optional = true }
rayon = "1.10"

[profile.release]
lto = "fat"          # Link Time Optimization: 全体を解析して関数インライン化を極限まで行う
codegen-units = 1    # 並列ビルドを無効化し、単一ユニットとして最適化の質を高める
panic = "abort"      # パニック時の巻き戻し処理（Unwind）を削除し、コードを軽量・高速化する (公平に比較したいのでZigやC言語に近い挙動を期待)
opt-level = 3        # 最適化レベル最大（デフォルトですが明示）
strip = true         # デバッグ情報を削除してバイナリを軽量化（キャッシュ効率向上）

[package.metadata.wasm-pack.profile.release]
wasm-opt = false